--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,21 +4,21 @@ server {
 
   location /api/ {
     proxy_set_header Host $http_host;
-    proxy_pass http://backend:9000/api/;
+    proxy_pass http://backend:8000/api/;
   }
   
   location /admin/ {
     proxy_set_header Host $http_host;
-    proxy_pass http://backend:9000/admin/;
+    proxy_pass http://backend:8000/admin/;
   }
   
   location /media/ {
     proxy_set_header Host $http_host;
-    alias /app/media;
+    alias /app/media/;
   }
 
   location / {
-    alias /static/;
+    alias /staticfiles/;
     try_files $uri $uri/ /index.html;
   }
 }
