--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,7 @@ name: Main Kittygram Workflow
 
 on:
   push:
-    branches:
-      - main
+
 # Тут задачи тестирования и сборки образа
 jobs:
   tests:
@@ -157,6 +156,11 @@ jobs:
           # Тут вместо username должен быть ваш логин на Docker Hub
           tags: master1941/kittygram_gateway:latest
 
+on:
+  push:
+    branches:
+      - main
+      
   deploy:
     runs-on: ubuntu-latest
     needs: 
