--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -160,7 +160,8 @@ on:
   push:
     branches:
       - main
-      
+# Тут задачи тестирования и сборки образа
+jobs:      
   deploy:
     runs-on: ubuntu-latest
     needs: 
