--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -155,13 +155,7 @@ jobs:
           push: true
           # Тут вместо username должен быть ваш логин на Docker Hub
           tags: master1941/kittygram_gateway:latest
-
-on:
-  push:
-    branches:
-      - main
-# Тут задачи тестирования и сборки образа
-jobs:      
+      
   deploy:
     runs-on: ubuntu-latest
     needs: 
@@ -169,6 +163,7 @@ jobs:
       - build_and_push_to_docker_hub
       - build_frontend_and_push_to_docker_hub
       - build_gateway_and_push_to_docker_hub
+    if: github.ref == 'refs/heads/master'
     steps:
     - name: Checkout repo
       uses: actions/checkout@v3
