--- a/kittygram_workflow.yml
+++ b/kittygram_workflow.yml
@@ -121,16 +121,13 @@ jobs:
           push: true
           tags: master1941/kittygram_gateway:latest
 
-on: 
-  push: 
-    branches: 
-      - main 
   deploy:
     runs-on: ubuntu-latest
     needs: 
       - build_and_push_to_docker_hub
       - build_frontend_and_push_to_docker_hub
       - build_gateway_and_push_to_docker_hub
+    if: github.ref == 'refs/heads/master'
     steps:
     - name: Checkout repo
       uses: actions/checkout@v3
